# openeo-ml-showcase

./: README.md
UC1_random_forest/agreement/: README.md  agreement.py  pyproject.toml
UC1_random_forest/agreement/results/: notes.txt
UC1_random_forest/compare/: Dockerfile  README.md  constants.py  docker-compose.yml  main.py  pyproject.toml
UC1_random_forest/compare/data/: .gitignore  result_python.gtiff  result_r.tif
UC1_random_forest/compare/results/: .gitignore
UC1_random_forest/compare/scripts/: __init__.py  aggregate_fields.py  histogram.py  plot.py
UC1_random_forest/python/: Dockerfile  job.batch
UC1_random_forest/r/: .dockerignore  DESCRIPTION  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_pg.R  run_pg.py
UC2_tempcnn/r/: README.md  docker-compose.yaml  usecase2.R
