[project]
name = "agreement"
version = "0.1.0"
description = "Per-pixel agreement metrics between UC1 Python and R classification rasters"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
    "rasterio>=1.5.0",
    "scikit-learn>=1.6.0",
]
